API renamed into One Time Password SMS

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -1,11 +1,12 @@
 openapi: 3.0.3
 info:
-  title: Number Verification SMS - DRAFT VERSION
+  title: One Time Password SMS - DRAFT VERSION
   description: |-
     Service Enabling Network Function API to send short-lived OTPs (one time passwords) to a phone number via SMS and validate it afterwards, in order to verify the phone number as a proof of possession.
 
     # Relevant  Definitions and concepts
-    - **NaaS**: *Network-as-a-Service* model where Telco Network resources are exposed to third parties through APIs. In this particular API, Number Verification is exposed following this model. 
+    - **NaaS**: *Network-as-a-Service* model where Telco Network resources are exposed to third parties through APIs. In this particular API, One Time Password is exposed following this model. 
+    - **OTP**: *One Time password* is a one-time authorization code (OTAC) that is valid for only one login session or transaction.
 
     # API Functionality 
     It enables a Service Provider (SP) to verify a phone number (MSISDN) by sending a code by SMS and validating the introduced code in order to make sure that the user has access to the given phone number.
@@ -28,8 +29,8 @@ servers:
         default: api.example.com
         description: Host that serves the API
       basePath:
-        default: /number-verification-sms/v0
-        description: Base path for the number verification sms API
+        default: /one-time-password-sms/v0
+        description: Base path for the one time password sms API
 tags:
   - name: OTP Management
     description: API operations to manage OTP codes
@@ -91,7 +92,7 @@ paths:
           $ref: '#/components/responses/Timeout'
       security:
         - two_legged:
-          - number-verification-sms:send-validate
+          - one-time-password-sms:send-validate
   /validate-code:
     post:
       tags:
@@ -145,7 +146,7 @@ paths:
           $ref: '#/components/responses/Timeout'
       security:
         - two_legged:
-          - number-verification-sms:send-validate
+          - one-time-password-sms:send-validate
 components:
   schemas:
     SendCodeBody:
@@ -215,9 +216,9 @@ components:
               type: string
               enum:
                 - PERMISSION_DENIED
-                - NUMBER_VERIFICATION_SMS.MAX_OTP_CODES_EXCEEDED
-                - NUMBER_VERIFICATION_SMS.PHONE_NUMBER_NOT_ALLOWED
-                - NUMBER_VERIFICATION_SMS.PHONE_NUMBER_BLOCKED
+                - ONE_TIME_PASSWORD_SMS.MAX_OTP_CODES_EXCEEDED
+                - ONE_TIME_PASSWORD_SMS.PHONE_NUMBER_NOT_ALLOWED
+                - ONE_TIME_PASSWORD_SMS.PHONE_NUMBER_BLOCKED
               default: PERMISSION_DENIED
               description: Client does not have sufficient permissions to perform this action.
         - $ref: '#/components/schemas/ModelError'
@@ -231,9 +232,9 @@ components:
               type: string
               enum:
                 - INVALID_ARGUMENT
-                - NUMBER_VERIFICATION_SMS.VERIFICATION_EXPIRED
-                - NUMBER_VERIFICATION_SMS.VERIFICATION_FAILED
-                - NUMBER_VERIFICATION_SMS.INVALID_OTP
+                - ONE_TIME_PASSWORD_SMS.VERIFICATION_EXPIRED
+                - ONE_TIME_PASSWORD_SMS.VERIFICATION_FAILED
+                - ONE_TIME_PASSWORD_SMS.INVALID_OTP
               default: INVALID_ARGUMENT
               description: Client specified an invalid argument, request body or query param.
         - $ref: '#/components/schemas/ModelError'
@@ -244,7 +245,7 @@ components:
         clientCredentials:
           tokenUrl: https://auth.example.com/token
           scopes:
-            number-verification-sms:send-validate: Permission to send OTP by SMS and to validate it  
+            one-time-password-sms:send-validate: Permission to send OTP by SMS and to validate it  
   responses:
     InvalidArgument:
       description: Problem with the client request
@@ -277,9 +278,9 @@ components:
     ValidateCodeBadRequestError:
       description: |-
         Problem with the client request. In addition to regular scenario of `INVALID_ARGUMENT`, another scenarios may exist:
-          - Too many unsuccessful attempts (`{"code": "NUMBER_VERIFICATION_SMS.VERIFICATION_FAILED","message": "The maximum number of attempts for this authentication_id was exceeded without providing a valid OTP"}`)
-          - Expired authentication_id (`{"code": "NUMBER_VERIFICATION_SMS.VERIFICATION_EXPIRED","message": "The authentication_id is no longer valid"}`)
-          - OTP is not valid for the provided authentication_id (`{"code": "NUMBER_VERIFICATION_SMS.INVALID_OTP","message": "The provided OTP is not valid for this authentication_id"}`)
+          - Too many unsuccessful attempts (`{"code": "ONE_TIME_PASSWORD_SMS.VERIFICATION_FAILED","message": "The maximum number of attempts for this authentication_id was exceeded without providing a valid OTP"}`)
+          - Expired authentication_id (`{"code": "ONE_TIME_PASSWORD_SMS.VERIFICATION_EXPIRED","message": "The authentication_id is no longer valid"}`)
+          - OTP is not valid for the provided authentication_id (`{"code": "ONE_TIME_PASSWORD_SMS.INVALID_OTP","message": "The provided OTP is not valid for this authentication_id"}`)
       headers:
         x-correlator:
           description: Correlation id for the different services
@@ -293,7 +294,7 @@ components:
             response:
               value:
                 status: "400"
-                code: NUMBER_VERIFICATION_SMS.VERIFICATION_FAILED
+                code: ONE_TIME_PASSWORD_SMS.VERIFICATION_FAILED
                 message: The maximum number of attempts for this authentication_id was exceeded without providing a valid OTP
     Unauthenticated:
       description: Authentication problem with the client request
@@ -355,9 +356,9 @@ components:
       description: |-
         Client does not have sufficient permissions to perform this action.
         In addition to regular scenario of `PERMISSION_DENIED`, another scenarios may exist:
-          - Too many code requests were sent (`{"code": "NUMBER_VERIFICATION_SMS.MAX_OTP_CODES_EXCEEDED","message": "Too many OTPs have been requested for this MSISDN. Try later."}`)
-          - The given phone_number can't receive an SMS due to business reasons in the operator, e.g. fraud, receiving SMS is not supported, etc (`{"code": "NUMBER_VERIFICATION_SMS.PHONE_NUMBER_NOT_ALLOWED","message": "Phone_number can't receive an SMS due to business reasons in the operator."}`)
-          - The given phone_number is blocked to receive SMS due to any blocking business reason in the operator (`{"code": "NUMBER_VERIFICATION_SMS.PHONE_NUMBER_BLOCKED","message": "Phone_number is blocked to receive SMS due to any blocking business reason in the operator."}`)
+          - Too many code requests were sent (`{"code": "ONE_TIME_PASSWORD_SMS.MAX_OTP_CODES_EXCEEDED","message": "Too many OTPs have been requested for this MSISDN. Try later."}`)
+          - The given phone_number can't receive an SMS due to business reasons in the operator, e.g. fraud, receiving SMS is not supported, etc (`{"code": "ONE_TIME_PASSWORD_SMS.PHONE_NUMBER_NOT_ALLOWED","message": "Phone_number can't receive an SMS due to business reasons in the operator."}`)
+          - The given phone_number is blocked to receive SMS due to any blocking business reason in the operator (`{"code": "ONE_TIME_PASSWORD_SMS.PHONE_NUMBER_BLOCKED","message": "Phone_number is blocked to receive SMS due to any blocking business reason in the operator."}`)
       headers:
         x-correlator:
           description: Correlation id for the different services
@@ -371,7 +372,7 @@ components:
             response:
               value:
                 status: "403"
-                code: NUMBER_VERIFICATION_SMS.MAX_OTP_CODES_EXCEEDED
+                code: ONE_TIME_PASSWORD_SMS.MAX_OTP_CODES_EXCEEDED
                 message: Too many OTPs have been requested for this MSISDN. Try later.
     NotFound:
       description: Resource Not Found
