--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: One Time Password SMS - DRAFT VERSION
+  title: One Time Password SMS
   description: |-
     Service Enabling Network Function API to send short-lived OTPs (one time passwords) to a phone number via SMS and validate it afterwards, in order to verify the phone number as a proof of possession.
 
