API functionality description edited

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -9,7 +9,7 @@ info:
     - **OTP**: *One Time password* is a one-time authorization code (OTAC) that is valid for only one login session or transaction.
 
     # API Functionality 
-    It enables a Service Provider (SP) to verify a phone number (MSISDN) by sending a code by SMS and validating the introduced code in order to make sure that the user has access to the given phone number.
+    It enables a Service Provider (SP) to send an OTP code by SMS and validate it to verify the phone number (MSISDN) as a proof of possession.
 
     # Resources and Operations overview
     This API currently provides two endpoints, one to send an OTP to a given phone number and another to validate the code received as input.
