status type changed into integer

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -13,7 +13,7 @@ info:
 
     # Resources and Operations overview
     This API currently provides two endpoints, one to send an OTP to a given phone number and another to validate the code received as input.
-  version: 0.1.0
+  version: 0.2.0
   termsOfService: http://example.com/terms/
   contact:
     name: API Support
@@ -200,8 +200,9 @@ components:
         - message
       properties:
         status:
-          type: string
-          pattern: '^[1-5][0-9][0-9]$'
+          type: integer
+          minimum: 100
+          maximum: 600
           description: HTTP response status code
         message:
           type: string
@@ -272,7 +273,7 @@ components:
           examples:
             response:
               value:
-                status: "400"
+                status: 400
                 code: INVALID_ARGUMENT
                 message: Client specified an invalid argument, request body or query param
     ValidateCodeBadRequestError:
@@ -293,7 +294,7 @@ components:
           examples:
             response:
               value:
-                status: "400"
+                status: 400
                 code: ONE_TIME_PASSWORD_SMS.VERIFICATION_FAILED
                 message: The maximum number of attempts for this authentication_id was exceeded without providing a valid OTP
     Unauthenticated:
@@ -321,7 +322,7 @@ components:
           examples:
             response:
               value:
-                status: "401"
+                status: 401
                 code: UNAUTHENTICATED
                 message: Request not authenticated due to missing, invalid, or expired credentials
     PermissionDenied:
@@ -349,7 +350,7 @@ components:
           examples:
             response:
               value:
-                status: "403"
+                status: 403
                 code: PERMISSION_DENIED
                 message: Client does not have sufficient permissions to perform this action
     SendCodeForbiddenError:
@@ -371,7 +372,7 @@ components:
           examples:
             response:
               value:
-                status: "403"
+                status: 403
                 code: ONE_TIME_PASSWORD_SMS.MAX_OTP_CODES_EXCEEDED
                 message: Too many OTPs have been requested for this MSISDN. Try later.
     NotFound:
@@ -399,7 +400,7 @@ components:
           examples:
             response:
               value:
-                status: "404"
+                status: 404
                 code: NOT_FOUND
                 message: A specified resource is not found
     MethodNotAllowed:
@@ -427,7 +428,7 @@ components:
           examples:
             response:
               value:
-                status: "405"
+                status: 405
                 code: METHOD_NOT_ALLOWED
                 message: The requested method is not allowed/supported on the target resource
     NotAcceptable:
@@ -455,7 +456,7 @@ components:
           examples:
             response:
               value:
-                status: "406"
+                status: 406
                 code: NOT_ACCEPTABLE
                 message: The server can't produce a response matching the content requested by the client through Accept-* headers
     UnsupportedMediaType:
@@ -483,7 +484,7 @@ components:
           examples:
             response:
               value:
-                status: "415"
+                status: 415
                 code: UNSUPPORTED_MEDIA_TYPE
                 message: The server refuses to accept the request because the payload format is in an unsupported format
     TooManyRequests:
@@ -511,7 +512,7 @@ components:
           examples:
             response:
               value:
-                status: "429"
+                status: 429
                 code: TOO_MANY_REQUESTS
                 message: Either out of resource quota or reaching rate limiting
     Internal:
@@ -539,7 +540,7 @@ components:
           examples:
             response:
               value:
-                status: "500"
+                status: 500
                 code: INTERNAL
                 message: Server error
     Unavailable:
@@ -567,7 +568,7 @@ components:
           examples:
             response:
               value:
-                status: "503"
+                status: 503
                 code: UNAVAILABLE
                 message: Service unavailable
     Timeout:
@@ -595,7 +596,7 @@ components:
           examples:
             response:
               value:
-                status: "504"
+                status: 504
                 code: TIMEOUT
                 message: Request timeout exceeded. Try later.
 externalDocs:
