--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -179,6 +179,7 @@ components:
     PhoneNumber:
       description: A phone number belonging to the user. 'E164 with +' format
       type: string
+      pattern: '^\+?[0-9]{5,15}$'
       example: '+346661113334'
     Message:
       type: string
