--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -177,7 +177,7 @@ components:
         - authentication_id
         - code
     PhoneNumber:
-      description: A phone number belonging to the user. 'E164 with +' format
+      description: A phone number belonging to the user. 'E164 with an optional +' format
       type: string
       pattern: '^\+?[0-9]{5,15}$'
       example: '+346661113334'
