--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -13,7 +13,7 @@ info:
 
     # Resources and Operations overview
     This API currently provides two endpoints, one to send an OTP to a given phone number and another to validate the code received as input.
-  version: 0.3.0
+  version: 0.4.0
   termsOfService: http://example.com/terms/
   contact:
     name: API Support
@@ -184,7 +184,8 @@ components:
     Message:
       type: string
       description: Message template used to compose the content of the SMS sent to the phone number. It must include the following label indicating where to include the short code `{{code}}`
-      pattern: .*\{\{code\}\}.*      
+      pattern: .*\{\{code\}\}.*
+      maxLength: 150
       example: '{{code}} is your short code to authenticate with Cool App via SMS'
     AuthenticationId:
       type: string
