--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -190,10 +190,12 @@ components:
     AuthenticationId:
       type: string
       description: unique id of the verification attempt the code belongs to.
+      maxLength: 36
       example: ea0840f3-3663-4149-bd10-c7c6b8912105
     Code:
       type: string
       description: temporal, short code to be validated
+      maxLength: 10
       example: AJY3
     ErrorInfo:
       type: object
