--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,4 @@
 
 # These are the default owners for the whole content of this repository. The default owners are automatically added as reviewers when you open a pull request, unless different owners are specified in the file.
 
-* @DT-DawidWroblewski @bigludo7
+* @DT-DawidWroblewski @bigludo7 @fernandopradocabrillo
