Make '+' mandatory for phoneNumber
Make '+' mandatory for phoneNumber

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -13,7 +13,7 @@ info:
 
     # Resources and Operations overview
     This API currently provides two endpoints, one to send an OTP to a given phone number and another to validate the code received as input.
-  version: 0.5.0
+  version: 0.6.0-wip
   termsOfService: http://example.com/terms/
   contact:
     name: API Support
@@ -177,9 +177,9 @@ components:
         - authenticationId
         - code
     PhoneNumber:
-      description: A phone number belonging to the user. 'E164 with an optional +' format
+      description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, prefixed with '+'.
       type: string
-      pattern: '^\+?[0-9]{5,15}$'
+      pattern: '^\+[1-9][0-9]{4,14}$'
       example: '+346661113334'
     Message:
       type: string
