update version to wip as per commonalities guideline

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -13,7 +13,7 @@ info:
 
     # Resources and Operations overview
     This API currently provides two endpoints, one to send an OTP to a given phone number and another to validate the code received as input.
-  version: 0.6.0-wip
+  version: wip
   termsOfService: http://example.com/terms/
   contact:
     name: API Support
