--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,3 +7,7 @@
 # These are the default owners for the whole content of this repository. The default owners are automatically added as reviewers when you open a pull request, unless different owners are specified in the file.
 
 * @bigludo7 @fernandopradocabrillo
+
+# Owners of the CODEOWNER and Maintainer.md files are the admins of CAMARA (to allow them to keep the teams within the CAMARA organization in sync in case of changes)
+/CODEOWNERS @camaraproject/admins
+/MAINTAINERS.MD @camaraproject/admins
