--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -99,7 +99,7 @@ paths:
         '504':
           $ref: '#/components/responses/Generic504'
       security:
-        - two_legged:
+        - openId:
             - one-time-password-sms:send-validate
   /validate-code:
     post:
@@ -153,7 +153,7 @@ paths:
         '504':
           $ref: '#/components/responses/Generic504'
       security:
-        - two_legged:
+        - openId:
             - one-time-password-sms:send-validate
 components:
   schemas:
@@ -226,14 +226,9 @@ components:
           type: string
           description: Detailed error description
   securitySchemes:
-    two_legged:
-      type: oauth2
-      description: oauth2 security schema
-      flows:
-        clientCredentials:
-          tokenUrl: https://auth.example.com/token
-          scopes:
-            one-time-password-sms:send-validate: Permission to send OTP by SMS and to validate it
+    openId:
+      type: openIdConnect
+      openIdConnectUrl: https://example.com/.well-known/openid-configuration
   responses:
     Generic400:
       description: Problem with the client request
