--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -328,41 +328,48 @@ components:
           schema:
             $ref: '#/components/schemas/ErrorInfo'
           examples:
-            PermissionDenied:
+            PERMISSION_DENIED:
               value:
                 status: 403
                 code: PERMISSION_DENIED
                 message: Client does not have sufficient permissions to perform this action
-            MaxOtpCodesExceeded:
+            MAX_OTP_CODES_EXCEEDED:
               value:
                 status: 403
                 code: ONE_TIME_PASSWORD_SMS.MAX_OTP_CODES_EXCEEDED
                 message: Too many OTPs have been requested for this MSISDN. Try later.
-            PhoneNumberNotAllowed:
+            PHONE_NUMBER_NOT_ALLOWED:
               value:
                 status: 403
                 code: ONE_TIME_PASSWORD_SMS.PHONE_NUMBER_NOT_ALLOWED
                 message: Phone_number can't receive an SMS due to business reasons in the operator.
-            Phone_number_blocked:
+            PHONE_NUMBER_BLOCKED:
               value:
                 status: 403
                 code: ONE_TIME_PASSWORD_SMS.PHONE_NUMBER_BLOCKED
                 message: Phone_number is blocked to receive SMS due to any blocking business reason in the operator.
     Generic404:
-      description: Resource Not Found
+      description: Not found
       headers:
         x-correlator:
-          description: Correlation id for the different services
-          schema:
-            type: string
+          $ref: "#/components/headers/x-correlator"
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/ErrorInfo'
-          example:
-            status: 404
-            code: NOT_FOUND
-            message: A specified resource is not found
+            $ref: "#/components/schemas/ErrorInfo"
+          examples:
+            GENERIC_404_NOT_FOUND:
+              description: Resource is not found
+              value:
+                status: 404
+                code: NOT_FOUND
+                message: The specified resource is not found.
+            GENERIC_404_DEVICE_NOT_FOUND:
+              description: Device identifier not found
+              value:
+                status: 404
+                code: DEVICE_NOT_FOUND
+                message: Device identifier not found.
     Generic405:
       description: The requested method is not allowed/supported on the target resource
       headers:
