Make megalinter happy
Make megalinter happy

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -352,7 +352,9 @@ components:
       description: Not found
       headers:
         x-correlator:
-          $ref: "#/components/headers/x-correlator"
+          description: Correlation id for the different services
+          schema:
+            type: string
       content:
         application/json:
           schema:
