Update one-time-password-sms yaml  version to 1.0.0-rc.1

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -21,7 +21,7 @@ info:
 
     It is important to remark that in cases where personal user data is processed by the API, and users can exercise their rights through mechanisms such as opt-in and/or opt-out, the use of 3-legged access tokens becomes mandatory. This measure ensures that the API remains in strict compliance with user privacy preferences and regulatory obligations, upholding the principles of transparency and user-centric data control.
 
-  version: wip
+  version: 1.0.0-rc.1
   termsOfService: http://example.com/terms/
   contact:
     name: API Support
