fixed url line 29 adding ""

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -26,7 +26,7 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-  - url: {apiRoot}/one-time-password-sms/v1rc1
+  - url: "{apiRoot}/one-time-password-sms/v1rc1"
     variables:
       apiRoot:
         default: http://localhost:9091
