--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -21,7 +21,7 @@ info:
 
     It is important to remark that in cases where personal user data is processed by the API, and users can exercise their rights through mechanisms such as opt-in and/or opt-out, the use of 3-legged access tokens becomes mandatory. This measure ensures that the API remains in strict compliance with user privacy preferences and regulatory obligations, upholding the principles of transparency and user-centric data control.
 
-  version: 1.0.0-rc.1
+  version: wip
   x-camara-commonalities: 0.4.0
   license:
     name: Apache 2.0
@@ -77,8 +77,6 @@ paths:
           $ref: '#/components/responses/SendCodeForbiddenError403'
         '404':
           $ref: '#/components/responses/Generic404'
-        '405':
-          $ref: '#/components/responses/Generic405'
         '406':
           $ref: '#/components/responses/Generic406'
         '415':
@@ -131,8 +129,6 @@ paths:
           $ref: '#/components/responses/Generic403'
         '404':
           $ref: '#/components/responses/Generic404'
-        '405':
-          $ref: '#/components/responses/Generic405'
         '406':
           $ref: '#/components/responses/Generic406'
         '415':
@@ -356,21 +352,6 @@ components:
             status: 404
             code: NOT_FOUND
             message: A specified resource is not found
-    Generic405:
-      description: The requested method is not allowed/supported on the target resource
-      headers:
-        x-correlator:
-          description: Correlation id for the different services
-          schema:
-            type: string
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ErrorInfo'
-          example:
-            status: 405
-            code: METHOD_NOT_ALLOWED
-            message: The requested method is not allowed/supported on the target resource
     Generic406:
       description: The server can not produce a response matching the content
       headers:
