--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -274,17 +274,17 @@ components:
             OTP_VALIDATION_400_VERIFICATION_FAILED:
               value:
                 status: 400
-                code: ONE_TIME_PASSWORD_SMS.VERIFICATION_FAILED
+                code: ONE_TIME_PASSWORD_SMS_VERIFICATION_FAILED
                 message: The maximum number of attempts for this authenticationId was exceeded without providing a valid OTP
             OTP_VALIDATION_400_VERIFICATION_EXPIRED:
               value:
                 status: 400
-                code: ONE_TIME_PASSWORD_SMS.VERIFICATION_EXPIRED
+                code: ONE_TIME_PASSWORD_SMS_VERIFICATION_EXPIRED
                 message: The authenticationId is no longer valid
             OTP_VALIDATION_400_INVALID_OTP:
               value:
                 status: 400
-                code: ONE_TIME_PASSWORD_SMS.INVALID_OTP
+                code: ONE_TIME_PASSWORD_SMS_INVALID_OTP
                 message: The provided OTP is not valid for this authenticationId
     Generic401:
       description: Authentication problem with the client request
@@ -335,6 +335,7 @@ components:
               value:
                 status: 403
                 code: PERMISSION_DENIED
+                message: Client does not have sufficient permissions to perform this action.
     SendCodeForbiddenError403:
       description: |-
         Client does not have sufficient permissions to perform this action.
