Fixed enum for error code 400

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -247,9 +247,9 @@ components:
                     enum:
                       - INVALID_ARGUMENT
                       - OUT_OF_RANGE
-                      - OTP_VALIDATION_400_VERIFICATION_FAILED
-                      - OTP_VALIDATION_400_VERIFICATION_EXPIRED
-                      - OTP_VALIDATION_400_INVALID_OTP
+                      - ONE_TIME_PASSWORD_SMS.VERIFICATION_FAILED
+                      - ONE_TIME_PASSWORD_SMS.VERIFICATION_EXPIRED
+                      - ONE_TIME_PASSWORD_SMS.INVALID_OTP
           examples:
             GENERIC_400_OUT_OF_RANGE:
               description: Out of Range. Specific Syntax Exception used when a given field has a pre-defined range or a invalid filter criteria combination is requested
