switch phoneNumber back to mandatory

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -137,6 +137,7 @@ components:
           $ref: '#/components/schemas/Message'
       required:
         - message
+        - phoneNumber
     SendCodeResponse:
       description: Structure to provide authentication identifier
       type: object
