Add pattern for x-correlator & update 429 message

--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -45,12 +45,7 @@ paths:
         Sends an SMS with the desired message and an OTP code to the received phone number.
       operationId: sendCode
       parameters:
-        - in: header
-          name: x-correlator
-          required: false
-          description: Correlation id for the different services
-          schema:
-            type: string
+        - $ref: "#/components/parameters/x-correlator"
       requestBody:
         content:
           application/json:
@@ -89,14 +84,7 @@ paths:
         Verifies the code is valid for the received authenticationId
       operationId: validateCode
       parameters:
-        - in: header
-          name: x-correlator
-          required: false
-          description: Correlation id for the different services
-          schema:
-            type: string
-            pattern: ^[a-zA-Z0-9-]{0,55}$
-            example: "b4333c46-49c0-4f62-80d7-f0ef930f1c46"
+        - $ref: "#/components/parameters/x-correlator"
       requestBody:
         content:
           application/json:
@@ -123,11 +111,22 @@ paths:
         - openId:
             - one-time-password-sms:send-validate
 components:
+  parameters:
+    x-correlator:
+      name: x-correlator
+      in: header
+      description: Correlation id for the different services
+      schema:
+        type: string
+        pattern: ^[a-zA-Z0-9-]{0,55}$
+        example: "b4333c46-49c0-4f62-80d7-f0ef930f1c46"
   headers:
     x-correlator:
       description: Correlation id for the different services
       schema:
         type: string
+        pattern: ^[a-zA-Z0-9-]{0,55}$
+        example: "b4333c46-49c0-4f62-80d7-f0ef930f1c46"
   schemas:
     SendCodeBody:
       description: Structure to request sending a code to a phone number
@@ -427,13 +426,13 @@ components:
               value:
                 status: 429
                 code: QUOTA_EXCEEDED
-                message: Either out of resource quota or reaching rate limiting.
+                message: Out of resource quota.
             GENERIC_429_TOO_MANY_REQUESTS:
-              description: API Server request limit is overpassed
+              description: Access to the API has been temporarily blocked due to rate or spike arrest limits being reached
               value:
                 status: 429
                 code: TOO_MANY_REQUESTS
-                message: Either out of resource quota or reaching rate limiting.
+                message: Rate limit reached.
 externalDocs:
   description: Project documentation at CAMARA
   url: https://github.com/camaraproject/NumberVerificationSMS2FA
