--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -22,13 +22,13 @@ info:
 
     In cases where personal data is processed by the API and users can exercise their rights through mechanisms such as opt-in and/or opt-out, the use of three-legged access tokens is mandatory. This ensures that the API remains in compliance with privacy regulations, upholding the principles of transparency and user-centric privacy-by-design.
 
-  version: 1.1.0-rc.1
+  version: 1.1.0-rc.2
   x-camara-commonalities: 0.5.0
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-  - url: "{apiRoot}/one-time-password-sms/v1.1.0-rc.1"
+  - url: "{apiRoot}/one-time-password-sms/v1rc2"
     variables:
       apiRoot:
         default: http://localhost:9091
