--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -21,7 +21,7 @@ info:
 
     In cases where personal data is processed by the API and users can exercise their rights through mechanisms such as opt-in and/or opt-out, the use of three-legged access tokens is mandatory. This ensures that the API remains in compliance with privacy regulations, upholding the principles of transparency and user-centric privacy-by-design.
 
-  version: wip
+  version: 1.1.0
   x-camara-commonalities: 0.5
   license:
     name: Apache 2.0
@@ -30,7 +30,7 @@ externalDocs:
   description: Project documentation at CAMARA
   url: https://github.com/camaraproject/OTPValidation
 servers:
-  - url: "{apiRoot}/one-time-password-sms/vwip"
+  - url: "{apiRoot}/one-time-password-sms/v1"
     variables:
       apiRoot:
         default: http://localhost:9091
