--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -28,8 +28,8 @@ info:
 
     As a specific rule, error `501 - NOT_IMPLEMENTED` can be only a possible error response if it is explicitly documented in the API.
 
-  version: 1.1.0
-  x-camara-commonalities: 0.5
+  version: 1.2.0-rc.1
+  x-camara-commonalities: 0.6
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
@@ -37,7 +37,7 @@ externalDocs:
   description: Project documentation at CAMARA
   url: https://github.com/camaraproject/OTPValidation
 servers:
-  - url: "{apiRoot}/one-time-password-sms/v1"
+  - url: "{apiRoot}/one-time-password-sms/v1.2-rc.1"
     variables:
       apiRoot:
         default: http://localhost:9091
