--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -37,7 +37,7 @@ externalDocs:
   description: Project documentation at CAMARA
   url: https://github.com/camaraproject/OTPValidation
 servers:
-  - url: "{apiRoot}/one-time-password-sms/v1.2-rc.1"
+  - url: "{apiRoot}/one-time-password-sms/v1.2rc1"
     variables:
       apiRoot:
         default: http://localhost:9091
