--- a/code/API_definitions/one-time-password-sms.yaml
+++ b/code/API_definitions/one-time-password-sms.yaml
@@ -28,7 +28,7 @@ info:
 
     As a specific rule, error `501 - NOT_IMPLEMENTED` can be only a possible error response if it is explicitly documented in the API.
 
-  version: 1.1.1-rc.3
+  version: 1.1.1
   x-camara-commonalities: 0.6
   license:
     name: Apache 2.0
@@ -37,7 +37,7 @@ externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/OTPValidation
 servers:
-  - url: "{apiRoot}/one-time-password-sms/v1rc3"
+  - url: "{apiRoot}/one-time-password-sms/v1"
     variables:
       apiRoot:
         default: http://localhost:9091
@@ -202,10 +202,10 @@ components:
           description: HTTP response status code
         code:
           type: string
-          description: Code given to this error
+          description: A human-readable code to describe the error
         message:
           type: string
-          description: Detailed error description
+          description: A human-readable description of what the event represents
   securitySchemes:
     openId:
       type: openIdConnect
